--- a/src/projects/ProjectsCss.css
+++ b/src/projects/ProjectsCss.css
@@ -17,7 +17,6 @@
 }
 
 .projectsImg, .projectsImg2 {
-    margin-top: -3%;
     border-radius: 20px;
     float: left;
 }
